<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/diaColor"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/textColor"
        android:text="@string/diaInfo"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/diaHintColor"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/topInfo"
        android:textSize="10sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ip_topic_tv"
        android:textColor="@color/textColor"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/diaHintColor"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/contInfo"
        android:textSize="10sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ip_content_tv"
        android:textColor="@color/textColor"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/diaHintColor"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/deadlineInfo"
        android:textSize="10sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ip_deadline_tv"
        android:textColor="@color/textColor"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ip_num_tv"
        android:textColor="@color/numColor"
        android:gravity="end"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:textSize="15sp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ip_done_btn"
        android:text="@string/done_task"
        android:background="@drawable/button_shaped"
        android:textColor="@color/textColor"
        android:layout_margin="5dp"
        android:textSize="15sp"/>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ip_close_btn"
        android:text="@string/close"
        android:background="@drawable/button_shaped"
        android:textColor="@color/textColor"
        android:layout_margin="5dp"
        android:textSize="15sp"/>


</LinearLayout>